<resources>
    <string name="app_name">Calvin Fitness</string>

    <string name="select_workout_text">Select a workout from the dropdown menu:
    Select Previously Saved Workout for a list of saved workouts.</string>

    <string name="previous_workout_text">Select a previously completed workout from the dropdown
        menu to view the results.</string>

    <string name="Calvin_Fitness_About">CalvinFitness was created by Ethan Clark, Russell Clousing, Mark Davis, Matt Kotva,
        and Mitch Stark for their CS262 Project at Calvin College, fall of 2016.</string>

    <string name="Calvin_Fitness_Help">"Welcome to Calvin Fitness, an application which makes tracking workouts an ease!\n        \nTo get started, select either the \"Create New Workout\" page or the \"Find Shared Workouts\" page.\n        \nOnce you have created your own workout or downloaded a shared workout, you can complete and view your workouts with \"Start Workout\" and \"View Previous Workout.\" "</string>

    <string name="help_finding_workouts">The detailed steps of how to find previously completed workouts are as follows:\n\n1. Find the down arrow in the top right corner, and click it.\n\n2. Then, select the name of the workout that you would like to view.\n\n3. Finally, click the \"View Past Workout\" button.\n</string>

    <string name="about_title">About</string>
    <string name="help_finding_workouts_title">Help: Find Past Workouts</string>
    <string name="help_title">Help</string>
    <string name="create_new_workout">Create New Workout</string>
    <string name="start_workout">Start Workout</string>
    <string name="view_previous_workout">View Previous Workout</string>

    <string name="intro_help_create">Here are some instructions for creating a new workout</string>
    <string name="create_new_help_1">1.	Enter a name for the workout</string>
    <string name="create_new_help_2">2.	Enter the name of the exercise</string>
    <string name="create_new_help_3">3.	Select how many sets</string>
    <string name="create_new_help_4">4.	Select how many reps</string>
    <string name="create_new_help_5">5.	Enter the weight in pounds</string>
    <string name="create_new_help_6">6.	Hit the button labeled add to workout</string>
    <string name="create_new_help_7">7.\tContinue adding exercises until satisfied (steps 2 through 6)</string>
    <string name="create_new_help_8">8.	Hit the button labeled save workout to save the workout</string>

    <string name="start_workout_intro">Here are some instructions for starting a workout</string>
    <string name="start_workout_1">1.	On the dropdown menu, select a workout</string>
    <string name="start_workout_2">2.	Press the Start button</string>

    <string name="Workout_Name_TextView">Workout Name:</string>
    <string name="Date_TextView">Date:</string>
    <string name="WorkoutName_EditText" />
    <string name="WorkoutDate_EditText" />
    <string name="EnterNewExercise_Button">Enter New Exercise</string>
    <string name="Workout_Name_text">Workout Name:</string>
    <string name="Exercise_Name_text">Exercise Name:</string>
    <string name="Set_Count_text">Sets</string>
    <string name="Rep_Count_text">Reps</string>
    <string name="Weight_text">Weight</string>
    <string name="Add_exercise_button">ADD TO WORKOUT</string>
    <string name="Error_text_msg">Please fill in all Fields</string>

    <string name="view_workout_button_text">View Past Workout</string>
    <string name="filled_in_workout_name" />

    <string name="Sets_TextView">Sets</string>
    <string name="Cross_TextView">\@</string>
    <string name="Reps_TextView">Reps</string>
    <string name="lbs_TextView">lbs</string>

    <string name="Exercise_Name" />
    <string name="Number_Sets" />
    <string name="Number_Reps" />
    <string name="Number_Weight" />

    <string name="Separator_TextView">:</string>
    <string name="save_workout">Save Workout</string>
    <string name="share_users">Users</string>
    <string name="share_workouts">Workouts</string>
    <string name="find_shared_workouts">Find Shared Workouts</string>

    <string name="title_activity_login"> Calvin Fitness </string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="title_activity_create__user_">Create_User_Activity</string>
    <string name="shared_workout_button">Save Workout</string>
    <string name="lbs_label">lbs</string>
    <string name="shared_workout_view">View Workout</string>
    <string name="share_workout_button_label">Share Workout</string>
    <string name="text_find_shared_workouts" >The Find Shared Workouts Activity allows users to find, view, and save workouts that other users have shared.\n\n1. Select a user from the Users Dropdown Menu.\n\n2. Select a workout from the Workouts Dropdown Menu.\n\n3. Press the View Workout Button to view the selected workout.\n\n4. If this workout looks good to you, press the Save Workout Button to save the workout to your Start Workout screen.</string>

</resources>
