<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create__new__workout_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.calvin.calvinfitness.Create_New_Workout_Activity">

    <Button
        android:text="@string/save_workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/save_new_workout"
        android:layout_alignParentBottom="true"
        android:onClick=""/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Workout_Name_TextView"
                android:layout_width="156dp"
                android:layout_height="52dp"
                android:id="@+id/Workout_name_text"
                android:textSize="18sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/WorkoutName_EditText"
                android:ems="10"
                android:id="@+id/WorkoutName_Edit" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Exercise_Name_text"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:id="@+id/Exercise_Name_text"
                android:layout_weight="16.95"
                android:textSize="18sp" />

            <EditText
                android:layout_width="198dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/Exercise_name_edit" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.23">

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.85"
            android:weightSum="1">

            <Spinner
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:id="@+id/num_of_sets_spinner"
                android:layout_weight="0.41" />

            <Spinner
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:id="@+id/Number_of_reps_spinner" />

            <EditText
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:ems="10"
                android:hint="lbs"
                android:id="@+id/weight_text_box" />

        </LinearLayout>

        <Button
            android:text="@string/Add_exercise_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Add_exercise_button"
            android:textSize="18sp" />

        <TextView
            android:text="@string/Error_text_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#F00"
            android:textSize="24sp"
            android:id="@+id/error_text_field" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Exercises_Text_Field"
            android:layout_weight="2597.84"
            android:textSize="24sp"
            android:scrollbars="vertical"/>

    </LinearLayout>

</RelativeLayout>
