<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.calvin.calvinfitness.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="268dp"
            app:srcCompat="@drawable/weights"
            android:layout_alignLeft="@+id/start_workout_button"
            android:layout_alignStart="@+id/start_workout_button"
            android:id="@+id/imageView"
            android:layout_alignRight="@+id/start_workout_button"
            android:layout_alignEnd="@+id/start_workout_button"
            android:layout_weight="0.20" />

        <Button
            android:text="@string/create_new_workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/create_workout_button"
            android:minWidth="200dp"
            android:layout_above="@+id/past_workout_button"
            android:layout_centerHorizontal="true"
            android:onClick="CreateNewWorkout"
            android:layout_weight="0.24"
            android:textSize="24sp" />

        <Button
            android:text="@string/start_workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/start_workout_button"
            android:minWidth="200dp"
            android:maxWidth="200dp"
            android:layout_above="@+id/create_workout_button"
            android:layout_alignLeft="@+id/create_workout_button"
            android:layout_alignStart="@+id/create_workout_button"
            android:onClick="StartWorkout"
            android:layout_weight="0.26"
            android:textSize="24sp" />

        <Button
            android:text="@string/view_previous_workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/past_workout_button"
            android:minWidth="200dp"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/create_workout_button"
            android:layout_alignStart="@+id/create_workout_button"
            android:onClick="PastWorkout"
            android:layout_weight="0.31"
            android:textSize="24sp" />

    </LinearLayout>

</RelativeLayout>
